updated text to footer corrected spacing

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
     padding: 0;
     margin: 0;
+    font-family: verdana, tahoma, arial;
 }
 
 .body-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    padding: 0;
 }
 
 .logo {
@@ -18,7 +17,7 @@ body {
 
 header {
     background-color: #1f2937;
-    color: white;
+    color: #f9faf8;
     display: flex;
     justify-content: space-between;
 }
@@ -40,13 +39,18 @@ ul {
 
 .introduction {
     background-color: #1f2937;
-    color: white; 
+    color: #f9faf8; 
     display: flex;
 }
 
 .left-introduction {
     display: flex;
     flex-direction: column;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 800;
 }
 
 .right-introduction {
@@ -63,4 +67,5 @@ footer {
     padding: 20px;
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
